--- a/backend/.env
+++ b/backend/.env
@@ -4,4 +4,7 @@ JWT_SECRET=your_jwt_secret
 CLOUDINARY_API_KEY=your_cloudinary_api_key
 RAZORPAY_KEY_ID=rzp_test_G3RM5GSpAMPWLH
 RAZORPAY_KEY_SECRET=b9PUqPTFO1uaDy8KJVGQC5V5
+EMAIL_USER=jahnavi2003lenka@gmail.com
+EMAIL_PASS=qimi ychb zihp ibdi
+
 
