--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,4 @@
 REACT_APP_RAZORPAY_KEY_ID=rzp_test_G3RM5GSpAMPWLH
 
-REACT_APP_API_BASE_URL=https://eventease-bz0l.onrender.com/api
+# REACT_APP_API_BASE_URL=https://eventease-bz0l.onrender.com/api
+REACT_APP_API_BASE_URL=http://localhost:5600/api
