--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.8.4",
     "bootstrap": "^5.3.5",
     "chart.js": "^4.4.8",
+    "jwt-decode": "^4.0.0",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.487.0",
     "razorpay": "^2.9.6",
@@ -21,6 +22,8 @@
     "react-modal": "^3.16.3",
     "react-router-dom": "^6.30.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.10.1",
+    "react-toastify": "^11.0.5",
     "react-tsparticles": "^2.12.0",
     "tsparticles": "^2.12.0",
     "tsparticles-engine": "^2.12.0",
